--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <div class="header">
         <div clas="logo">
         <img src="img/EmeraldPVPlogo.png" alt="EmeraldPVP">
+            <h1>トップ</h1>
         </div>
         <ul>
-            <li><a href="">トップ</a></li>
+            <li><p>トップ</p></li>
             <li><a href="">お知らせ</a></li>
             <li><a href="">ルール</a></li>
             <li><a href="">運営紹介</a></li>
