--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         </div>
         <ul>
             <li><p>トップ</p></li>
-            <li><a href="">お知らせ</a></li>
-            <li><a href="">ルール</a></li>
-            <li><a href="">運営紹介</a></li>
+            <li><a href="osirase.html">お知らせ</a></li>
+            <li><a href="ruru.html">ルール</a></li>
+            <li><a href="une.html">運営紹介</a></li>
         </ul>
     </div>
 </body>
